src/objects/Live_Chat_Survey_Answer__c.object
<CustomObject>
    <fields>
        <fullName>ChatKey__c</fullName>
        <label>ChatKey</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Survey_Answer__c</fullName>
        <label>Chat Survey Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chat_Survey_Question__c</fullName>
        <label>Chat Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Live Chat Survey Answers</relationshipLabel>
        <relationshipName>Live_Chat_Survey_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Live_Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Live Chat Survey Answers</relationshipLabel>
        <relationshipName>Live_Chat_Survey_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Live Chat Survey Answer</label>
    <nameField>
        <label>Live Chat Survey Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Chat Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>